force-app/main/default/objects/Flight_Schedule__c/Flight_Schedule__c.object-meta.xml
<CustomObject>
    <label>Flight Schedule</label>
    <nameField>
        <displayFormat>FS-{00000}</displayFormat>
        <label>Flight Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Flight Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>