force-app/main/default/objects/Flight_Schedule__c/fields/Arrival_Terminal__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Terminal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Arrival Terminal</label>
    <referenceTo>Terminal__c</referenceTo>
    <relationshipLabel>Flight Schedules</relationshipLabel>
    <relationshipName>Flight_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>