force-app/main/default/objects/Flight_Schedule__c/fields/Departure_Terminal__c.field-meta.xml
<CustomField>
    <fullName>Departure_Terminal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Departure Terminal</label>
    <referenceTo>Terminal__c</referenceTo>
    <relationshipLabel>Flight Schedules (Departure Terminal)</relationshipLabel>
    <relationshipName>Flight_Schedules1</relationshipName>
    <type>Lookup</type>
</CustomField>