force-app/main/default/objects/Flight_Schedule__c/fields/Flight_Detail__c.field-meta.xml
<CustomField>
    <fullName>Flight_Detail__c</fullName>
    <label>Flight Detail</label>
    <referenceTo>Flight_Detail__c</referenceTo>
    <relationshipLabel>Flight Schedules</relationshipLabel>
    <relationshipName>Flight_Schedules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>