force-app/main/default/objects/Flight_Schedule__c/fields/STA__c.field-meta.xml
<CustomField>
    <fullName>STA__c</fullName>
    <label>STA</label>
    <type>Time</type>
</CustomField>