force-app/main/default/objects/Flight_Schedule__c/fields/STD__c.field-meta.xml
<CustomField>
    <fullName>STD__c</fullName>
    <label>STD</label>
    <type>Time</type>
</CustomField>